# slide_with_voice

./: .env.sample  .gitignore  Cargo.toml  README.md
.github/workflows/: main.yaml
resource/: resource.txt  voice_ids.json
src/: main.rs
src/slide/: mod.rs  section.rs  utils.rs  video.rs  video_option.rs  voice.rs
