[package]
name = "slide_with_voice"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.26"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.218"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.15.1", features = ["v4"] }
voicevox-client = "0.1.1"
